# vrx_sim_in_docker

./: .gitignore  Dockerfile  README.md
src/px4_ros_comp/px4_msgs/msg/: VehicleTwist.msg  WamvCommand.msg  WamvPose.msg
src/px4_ros_comp/px4_ros_com/: CMakeLists.txt  package.xml
src/px4_ros_comp/px4_ros_com/src/wamv_cmd_transition/: wamv_cmd_px4_to_ros2.cpp
src/vrx/vrx_gz/worlds/: .sydney_regatta.sdf.swp  stationkeeping_task.sdf  sydney_regatta.sdf
src/wamv_ctl/: package.xml  setup.cfg  setup.py
src/wamv_ctl/launch/: run_wamv.launch.py  run_wamv_adpLOS.launch.py  rviz.launch.py
src/wamv_ctl/wamv_ctl/: path_follow_adpLOS.py  station_keeping.py
src/wamv_ctl/wamv_ctl/path_generator/: dubins_path.py
src/wamv_ctl_cpp/: CMakeLists.txt  package.xml
src/wamv_ctl_cpp/config/: ctl_params.yaml
src/wamv_ctl_cpp/launch/: actuator_test.launch.py  uv_setup.launch.py
src/wamv_ctl_cpp/src/offboard_control/: offboard_control_actuator.cpp  offboard_control_actuator_test.cpp  offboard_control_uv.cpp
