cmake_minimum_required(VERSION 3.8)
project(wamv_ctl_cpp)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(px4_msgs REQUIRED)
find_package(eigen3_cmake_module REQUIRED)
find_package(Eigen3 REQUIRED)


#################
# Setup targets #
#################

include_directories(include) 

add_executable(offboard_control_actuator_test src/offboard_control/offboard_control_actuator_test.cpp)
ament_target_dependencies(offboard_control_actuator_test rclcpp px4_msgs)
install(TARGETS offboard_control_actuator_test DESTINATION lib/${PROJECT_NAME})

add_executable(uv_control src/offboard_control/offboard_control_uv.cpp)
ament_target_dependencies(uv_control rclcpp px4_msgs geometry_msgs Eigen3)
install(TARGETS uv_control DESTINATION lib/${PROJECT_NAME})

############
# Install ##
############

install(DIRECTORY launch DESTINATION share/${PROJECT_NAME}/)
install(DIRECTORY config DESTINATION share/${PROJECT_NAME}/)

############
# Testing ##
############

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
